--- a/ipynb/advance-generate.ipynb
+++ b/ipynb/advance-generate.ipynb
@@ -7,26 +7,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv add langchain"
+    "!uv add langchain\n",
+    "!uv add langchain-openai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "52cb9c7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='The capital of France is Paris.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 14, 'total_tokens': 22, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_4a331a0222', 'id': 'chatcmpl-Cf0LOKvPd5nlWxMpL6o7OMenGxTmv', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--16d75d8d-8c97-4ed3-a5d0-4debbf7f97ec-0', usage_metadata={'input_tokens': 14, 'output_tokens': 8, 'total_tokens': 22, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from langchain import LlamaCpp\n",
-    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "llm = LlamaCpp(\n",
-    "    model_path=\",\",\n",
-    "    n_gpu_layers=-1,\n",
-    "    max_tokens=500,\n",
-    "    n_ctx=2048,\n",
-    "    seed=42,\n",
-    "    verbose=False,\n",
+    "llm = ChatOpenAI(\n",
+    "    model=\"gpt-4o\",\n",
+    "    temperature=0.7,\n",
+    "    base_url='https://api.apiyi.com/v1'\n",
     ")\n",
     "\n",
     "chat_model=ChatOpenAI(\n",
@@ -39,12 +47,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a2d0f063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='The capital of France is Paris.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 35, 'total_tokens': 43, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_4a331a0222', 'id': 'chatcmpl-Cf0LcrG0ZFK71DnYYFtAmUyKb3Sch', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--a15c6794-a44f-4616-9ffb-c338bcca5598-0', usage_metadata={'input_tokens': 35, 'output_tokens': 8, 'total_tokens': 43, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from langchain import PromptTemplate\n",
+    "from langchain_core.prompts import PromptTemplate\n",
     "\n",
     "# 创建一个包含input_prompt变量的提示词模板\n",
     "template = \"\"\"<s><|user|>\n",
@@ -59,13 +78,134 @@
     "basic_chain = prompt | llm\n",
     "\n",
     "# 使用链式架构\n",
-    "basic_chain.invoke({\"input_prompt\": \"What is the capital of France?\"})"
+    "basic_chain.invoke({\"input_prompt\": \"My name is Maarten, What is the capital of France?\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff85f646",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
+    "# 定义 Prompt\n",
+    "# 提示：你的 template 中包含了特殊 tokens (<s><|user|>...)，通常用于本地模型或原始补全模型。\n",
+    "template = \"\"\"<s><|user|>\n",
+    "Create a title for a story about {summary}. Only return the title.<|end|>\n",
+    "<|assistant|>\"\"\"\n",
+    "\n",
+    "title_prompt = PromptTemplate(template=template, input_variables=[\"summary\"])\n",
+    "\n",
+    "# 定义输出解析器\n",
+    "# 直接将 LLM 的输出对象 (AIMessage) 转为纯字符串，相当于以前的 output_key=\"title\"\n",
+    "output_parser = StrOutputParser()\n",
+    "\n",
+    "# 构建链 (使用管道符 | )\n",
+    "# 流程：输入 -> 提示词 -> 模型 -> 字符串解析\n",
+    "chain = title_prompt | llm | output_parser\n",
+    "\n",
+    "# 调用链 (使用 invoke)\n",
+    "summary_text = \"a girl that find her boyfriend\"\n",
+    "title = chain.invoke({\"summary\": summary_text})\n",
+    "\n",
+    "print(title)\n",
+    "print(\"------------end title-----------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40704efa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 角色描述\n",
+    "# 使用故事梗概和标题创建一个链式架构来生成角色描述\n",
+    "template = \"\"\"<s><|user|>\n",
+    "Describe the main character of a story about {summary} with the title {title}.\n",
+    "Use only two sentences.<|end|>\n",
+    "<|assistant|>\"\"\"\n",
+    "\n",
+    "character_prompt = PromptTemplate(\n",
+    "    template=template, input_variables=[\"summary\", \"title\"]\n",
+    ")\n",
+    "chain = character_prompt | llm | output_parser\n",
+    "character_text = \"a brave knight who specifically fights data bugs\"\n",
+    "character = chain.invoke({\"summary\": character_text, \"title\": title})\n",
+    "print(character)\n",
+    "print(\"------------end character-----------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab03f8ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用故事梗概、标题和角色描述创建一个链式架构来生成故事\n",
+    "template = \"\"\"<s><|user|>\n",
+    "Create a story about {summary} with the title {title}. The main character is:\n",
+    "{character}. Only return the story and it cannot be longer than one paragraph.\n",
+    "<|end|>\n",
+    "<|assistant|>\"\"\"\n",
+    "story_prompt = PromptTemplate(\n",
+    "    template=template, input_variables=[\"summary\", \"title\", \"character\"]\n",
+    ")\n",
+    "\n",
+    "chain = story_prompt | llm | output_parser\n",
+    "summary_text = \"a girl that find her favorite music\"\n",
+    "story = chain.invoke({\"summary\": character_text, \"title\": title, \"character\": character})\n",
+    "print(story)\n",
+    "print(\"------------end story-----------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6dcb22e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"I'm sorry, but I don't have access to personal data about individuals unless it is shared with me during our conversation. If you tell me your name, I will be happy to address you accordingly.\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 40, 'prompt_tokens': 27, 'total_tokens': 67, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-4o-2024-08-06', 'system_fingerprint': 'fp_4a331a0222', 'id': 'chatcmpl-Cf0NX7ivIhFuNUpHOT526WfgpG2yY', 'finish_reason': 'stop', 'logprobs': None}, id='lc_run--253a5ac8-9de3-4fa7-ace1-60d856fdbf7b-0', usage_metadata={'input_tokens': 27, 'output_tokens': 40, 'total_tokens': 67, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 告诉LLM我们的名字\n",
+    "basic_chain.invoke({\"input_prompt\": \"Hi! My name is Maarten. What is 1 + 1?\"})\n",
+    "\n",
+    "# 接下来，让LLM重复这个名字\n",
+    "basic_chain.invoke({\"input_prompt\": \"What is my name?\"})"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "hands-on-large-language-model",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
