--- a/ipynb/advance-generate.ipynb
+++ b/ipynb/advance-generate.ipynb
@@ -8,12 +8,13 @@
    "outputs": [],
    "source": [
     "!uv add langchain\n",
-    "!uv add langchain-openai"
+    "!uv add langchain-openai\n",
+    "!uv add langchain-community"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "52cb9c7b",
    "metadata": {},
    "outputs": [
@@ -35,11 +36,6 @@
     "    model=\"gpt-4o\",\n",
     "    temperature=0.7,\n",
     "    base_url='https://api.apiyi.com/v1'\n",
-    ")\n",
-    "\n",
-    "chat_model=ChatOpenAI(\n",
-    "    openai_api_key=\"\",\n",
-    "    base_url=\"\",\n",
     ")\n",
     "\n",
     "llm.invoke(\"What is the capital of France?\")"
@@ -186,6 +182,82 @@
     "\n",
     "# 接下来，让LLM重复这个名字\n",
     "basic_chain.invoke({\"input_prompt\": \"What is my name?\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aba32a5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI: Hello Maarten! The answer to 1 + 1 is 2.\n",
+      "--------------------\n",
+      "AI: Your name is Maarten.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables.history import RunnableWithMessageHistory\n",
+    "from langchain_community.chat_message_histories import ChatMessageHistory\n",
+    "from langchain_core.chat_history import BaseChatMessageHistory\n",
+    "\n",
+    "\n",
+    "# 定义 Prompt\n",
+    "# 注意：对于 ChatModel (如 GPT-4o)，推荐使用 ChatPromptTemplate + MessagesPlaceholder\n",
+    "# 这比手动写 \"<s><|user|>\" 更符合模型原生结构，效果更好。\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    # 这里的 MessagesPlaceholder 会自动把历史消息列表填充进来\n",
+    "    (\"system\", \"You are a helpful assistant.\"),\n",
+    "    MessagesPlaceholder(variable_name=\"chat_history\"), \n",
+    "    (\"human\", \"{input_prompt}\"),\n",
+    "])\n",
+    "\n",
+    "# 构建基础链 (LCEL)\n",
+    "# 此时这个链还不知道怎么处理记忆，它只是单纯的：输入 -> 提示词 -> 模型 -> 字符串\n",
+    "chain = prompt | llm | StrOutputParser()\n",
+    "\n",
+    "# 定义记忆存储管理\n",
+    "# 我们需要一个地方来存不同 session_id 的聊天记录\n",
+    "store = {}\n",
+    "\n",
+    "def get_session_history(session_id: str) -> BaseChatMessageHistory:\n",
+    "    if session_id not in store:\n",
+    "        store[session_id] = ChatMessageHistory()\n",
+    "    return store[session_id]\n",
+    "\n",
+    "# 包装链：添加记忆功能\n",
+    "# RunnableWithMessageHistory 会自动处理：\n",
+    "# 1. 运行前读取 history 注入到 prompt 的 chat_history 变量\n",
+    "# 2. 运行后将 input_prompt 和输出结果保存回 history\n",
+    "chain_with_history = RunnableWithMessageHistory(\n",
+    "    chain,\n",
+    "    get_session_history,\n",
+    "    input_messages_key=\"input_prompt\",\n",
+    "    history_messages_key=\"chat_history\",\n",
+    ")\n",
+    "\n",
+    "# 调用 (必须提供 config 包含 session_id)\n",
+    "# 第一轮对话\n",
+    "response1 = chain_with_history.invoke(\n",
+    "    {\"input_prompt\": \"Hi! My name is Maarten. What is 1 + 1?\"},\n",
+    "    config={\"configurable\": {\"session_id\": \"user_123\"}}\n",
+    ")\n",
+    "print(f\"AI: {response1}\")\n",
+    "\n",
+    "print(\"-\" * 35)\n",
+    "\n",
+    "# 第二轮对话 (测试记忆)\n",
+    "response2 = chain_with_history.invoke(\n",
+    "    {\"input_prompt\": \"What is my name?\"},\n",
+    "    config={\"configurable\": {\"session_id\": \"user_123\"}} # 使用相同的 session_id\n",
+    ")\n",
+    "print(f\"AI: {response2}\")"
    ]
   }
  ],
