--- a/ipynb/advance-generate.ipynb
+++ b/ipynb/advance-generate.ipynb
@@ -259,6 +259,145 @@
     ")\n",
     "print(f\"AI: {response2}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d0c395de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Round 1 ---\n",
+      "Hi Maarten! It's great to meet you. How can I assist you today?\n",
+      "\n",
+      "--- Round 2 ---\n",
+      "1 + 1 equals 2! 😊\n",
+      "\n",
+      "--- Round 3 ---\n",
+      "Your name is Maarten! 😊\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables.history import RunnableWithMessageHistory\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain_community.chat_message_histories import ChatMessageHistory\n",
+    "from langchain_core.chat_history import BaseChatMessageHistory\n",
+    "\n",
+    "# 1. 定义 LLM\n",
+    "llm = ChatOpenAI(\n",
+    "    model=\"gpt-4o\",\n",
+    "    temperature=0.7,\n",
+    "    base_url='https://api.apiyi.com/v1'\n",
+    ")\n",
+    "\n",
+    "# 2. 定义 Prompt\n",
+    "# 使用 MessagesPlaceholder 来接收历史记录\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"You are a helpful assistant.\"),\n",
+    "    MessagesPlaceholder(variable_name=\"chat_history\"), \n",
+    "    (\"human\", \"{input_prompt}\"),\n",
+    "])\n",
+    "\n",
+    "# 3. 定义 Window 逻辑 (关键步骤)\n",
+    "# k=2 意味着保留最后 2 轮对话 = 4 条消息 (User, AI, User, AI)\n",
+    "def filter_k_history(input_dict):\n",
+    "    history = input_dict.get(\"chat_history\", [])\n",
+    "    # 如果历史记录超过 4 条，只取最后 4 条\n",
+    "    return history[-4:] if len(history) > 4 else history\n",
+    "\n",
+    "# 4. 构建链 (LCEL)\n",
+    "# 流程: \n",
+    "# (a) RunnableWithMessageHistory 注入全量 chat_history\n",
+    "# (b) assign 步骤调用 filter_k_history 截断 chat_history\n",
+    "# (c) 传给 Prompt -> LLM -> Parser\n",
+    "chain = (\n",
+    "    RunnablePassthrough.assign(chat_history=filter_k_history) \n",
+    "    | prompt \n",
+    "    | llm \n",
+    "    | StrOutputParser()\n",
+    ")\n",
+    "\n",
+    "# 5. 记忆存储管理\n",
+    "store = {}\n",
+    "\n",
+    "def get_session_history(session_id: str) -> BaseChatMessageHistory:\n",
+    "    if session_id not in store:\n",
+    "        store[session_id] = ChatMessageHistory()\n",
+    "    return store[session_id]\n",
+    "\n",
+    "# 6. 包装链\n",
+    "chain_with_window_memory = RunnableWithMessageHistory(\n",
+    "    chain,\n",
+    "    get_session_history,\n",
+    "    input_messages_key=\"input_prompt\",\n",
+    "    history_messages_key=\"chat_history\",\n",
+    ")\n",
+    "\n",
+    "# --- 测试验证 ---\n",
+    "\n",
+    "session_config = {\"configurable\": {\"session_id\": \"window_test_user\"}}\n",
+    "\n",
+    "# 第 1 轮\n",
+    "print(\"--- Round 1 ---\")\n",
+    "response = chain_with_window_memory.invoke(\n",
+    "    {\"input_prompt\": \"Hi! My name is Maarten and I am 33 years old.\"}, \n",
+    "    config=session_config\n",
+    ")\n",
+    "print(f\"{response}\")\n",
+    "\n",
+    "# 第 2 轮\n",
+    "print(\"\\n--- Round 2 ---\")\n",
+    "response = chain_with_window_memory.invoke(\n",
+    "    {\"input_prompt\": \"What is 1 + 1?\"}, \n",
+    "    config=session_config\n",
+    ")\n",
+    "print(f\"{response}\")\n",
+    "\n",
+    "# 第 3 轮 (此时第 1 轮的对话应该被挤出窗口)\n",
+    "print(\"\\n--- Round 3 ---\")\n",
+    "# 此时历史记录里有 Round 1 (User+AI) 和 Round 2 (User+AI)，共 4 条。\n",
+    "# 再次提问时，Round 1 将被切除，Round 2 和本次 Round 3 的输入将构成新的上下文。\n",
+    "response = chain_with_window_memory.invoke(\n",
+    "    {\"input_prompt\": \"What is my name?\"}, \n",
+    "    config=session_config\n",
+    ")\n",
+    "\n",
+    "print(f\"{response}\")\n",
+    "# 预期回答：AI 可能会说不知道，或者只记得上下文里的信息，因为包含名字的那句话已经被截断了。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6ddd3edd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Round 4 ---\n",
+      "I don't know your age unless you tell me! If you'd like to share some details, I'm happy to assist you further. 😊\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 检查模型是否记得我们给出的名字\n",
+    "print(\"\\n--- Round 4 ---\")\n",
+    "response = chain_with_window_memory.invoke(\n",
+    "    {\"input_prompt\":\"What is my age?\"},\n",
+    "    config=session_config\n",
+    ")\n",
+    "print(f\"{response}\")"
+   ]
   }
  ],
  "metadata": {
