--- a/ipynb/advance-generate.ipynb
+++ b/ipynb/advance-generate.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "001596af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2mResolved \u001b[1m126 packages\u001b[0m \u001b[2min 16ms\u001b[0m\u001b[0m\n",
+      "\u001b[2mAudited \u001b[1m104 packages\u001b[0m \u001b[2min 30ms\u001b[0m\u001b[0m\n",
+      "\u001b[2mResolved \u001b[1m126 packages\u001b[0m \u001b[2min 3ms\u001b[0m\u001b[0m\n",
+      "\u001b[2mAudited \u001b[1m104 packages\u001b[0m \u001b[2min 1ms\u001b[0m\u001b[0m\n",
+      "\u001b[2mResolved \u001b[1m126 packages\u001b[0m \u001b[2min 3ms\u001b[0m\u001b[0m\n",
+      "\u001b[2mAudited \u001b[1m104 packages\u001b[0m \u001b[2min 1ms\u001b[0m\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!uv add langchain\n",
     "!uv add langchain-openai\n",
@@ -397,6 +410,123 @@
     "    config=session_config\n",
     ")\n",
     "print(f\"{response}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecd39292",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/79/f9qbnfls3r51cr3tsymr2j0m0000gn/T/ipykernel_90082/1867450804.py:27: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "  memory = ConversationSummaryMemory(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Round 1 ---\n",
+      "AI: Hello Maarten! 1 + 1 equals 2. 😊 How can I assist you further?\n",
+      "\n",
+      "--- Round 2 ---\n",
+      "AI: Your name is Maarten!\n",
+      "\n",
+      "--- Round 3 ---\n",
+      "AI: The first question you asked was, \"What is 1 + 1?\"\n",
+      "\n",
+      "--- Memory Content ---\n",
+      "{'summary': 'Maarten introduces himself and asks a simple math question, \"What is 1 + 1?\" The AI responds by greeting Maarten, providing the correct answer (2), and offering further assistance. Maarten then asks, \"What is my name?\" and the AI correctly identifies his name as Maarten. Maarten follows up by asking, \"What was the first question I asked?\" and the AI accurately recalls that the first question was, \"What is 1 + 1?\"'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_classic.memory import ConversationSummaryMemory\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "\n",
+    "# 1. 定义摘要的 Prompt (保持你的原始模板)\n",
+    "summary_prompt_template = \"\"\"<s><|user|>Summarize the conversations and update\n",
+    "with the new lines.\n",
+    "Current summary:\n",
+    "{summary}\n",
+    "new lines of conversation:\n",
+    "{new_lines}\n",
+    "New summary:<|end|>\n",
+    "<|assistant|>\"\"\"\n",
+    "\n",
+    "summary_prompt = PromptTemplate(\n",
+    "    input_variables=[\"new_lines\", \"summary\"],\n",
+    "    template=summary_prompt_template\n",
+    ")\n",
+    "\n",
+    "# 2. 初始化记忆组件\n",
+    "# 注意：ConversationSummaryMemory 依然可以使用，但在 LCEL 中我们需要手动调用它的 load 和 save\n",
+    "memory = ConversationSummaryMemory(\n",
+    "    llm=llm,\n",
+    "    memory_key=\"summary\", # 这里我们将 key 设为 summary，以便在主 prompt 中使用\n",
+    "    prompt=summary_prompt\n",
+    ")\n",
+    "\n",
+    "# 3. 定义主对话的 Prompt\n",
+    "# 注意：在使用 LCEL 时，Prompt 必须显式包含 summary 的占位符\n",
+    "main_prompt = PromptTemplate.from_template(\n",
+    "    \"\"\"以下是目前的对话摘要:\n",
+    "{summary}\n",
+    "\n",
+    "用户: {input_prompt}\n",
+    "AI:\"\"\"\n",
+    ")\n",
+    "\n",
+    "# 4. 构建 LCEL 链\n",
+    "# 逻辑：先获取 input_prompt -> 从 memory 加载 summary -> 传给 prompt -> llm -> 解析输出\n",
+    "chain = (\n",
+    "    RunnablePassthrough.assign(\n",
+    "        summary=lambda x: memory.load_memory_variables({})[\"summary\"]\n",
+    "    )\n",
+    "    | main_prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    ")\n",
+    "\n",
+    "# 5. 定义一个执行函数来处理“调用”和“保存记忆”\n",
+    "def chat_with_memory(input_text):\n",
+    "    # 1. 调用链生成回复\n",
+    "    response = chain.invoke({\"input_prompt\": input_text})\n",
+    "    \n",
+    "    # 2. 手动保存上下文到记忆中 (这是 LCEL 与旧版 LLMChain 最大的不同)\n",
+    "    memory.save_context(\n",
+    "        {\"input\": input_text}, \n",
+    "        {\"output\": response}\n",
+    "    )\n",
+    "    \n",
+    "    return response\n",
+    "\n",
+    "# --- 测试代码 ---\n",
+    "\n",
+    "# 第一轮对话\n",
+    "print(\"--- Round 1 ---\")\n",
+    "response1 = chat_with_memory(\"Hi! My name is Maarten. What is 1 + 1?\")\n",
+    "print(f\"AI: {response1}\")\n",
+    "\n",
+    "# 第二轮对话\n",
+    "print(\"\\n--- Round 2 ---\")\n",
+    "response2 = chat_with_memory(\"What is my name?\")\n",
+    "print(f\"AI: {response2}\")\n",
+    "\n",
+    "# 第三轮对话：询问第一个问题是什么（这取决于摘要是否包含该细节）\n",
+    "print(\"\\n--- Round 3 ---\")\n",
+    "response3 = chat_with_memory(\"What was the first question I asked?\")\n",
+    "print(f\"AI: {response3}\")\n",
+    "\n",
+    "# 查看当前的摘要状态\n",
+    "print(\"\\n--- Memory Content ---\")\n",
+    "print(memory.load_memory_variables({}))"
    ]
   }
  ],
